--- a/assets/style.css
+++ b/assets/style.css
@@ -245,3 +245,9 @@ form {
 .btn-primary:hover {
     background-color: #003d5b;
 }
+img.avatar {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    object-fit: cover;
+}
